fixed project images on mobile layout

--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -56,7 +56,7 @@
 
     &__img {
         display: inline-block;
-        border-radius: .5rem;
+        border-radius: .5rem .5rem 0 0;
         background-size: cover;
         //height: 32rem;
         width: 100%;
@@ -82,7 +82,7 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    bottom: -4rem;
+    bottom: -5rem;
     width: 100%;
     color: #fff;
     
@@ -171,7 +171,8 @@
         margin: 0 !important;
     }
 
-    .projects__img { 
+    .projects__img {
+        border-radius: .5rem;
         position: unset;
         height: 16rem;
     }
